--- a/paper/first.tex
+++ b/paper/first.tex
@@ -497,7 +497,7 @@ Two main refinements are recommended: the uncertainty quantification should be e
 The data and code for the project can be found in the repository \url{https://github.com/zixiao-h/aeons}.
 
 \bibliographystyle{mnras}
-\bibliography{references}
+% \bibliography{references}
 
 
 \label{lastpage}
