--- a/paper/references.bib
+++ b/paper/references.bib
@@ -13,7 +13,7 @@
 }
 
 
-@article{dynamic_ns, title={Dynamic nested sampling: an improved algorithm for parameter estimation and evidence calculation}, volume={29}, url={http://arxiv.org/abs/1704.03459}, DOI={10.1007/s11222-018-9844-0}, abstractNote={We introduce dynamic nested sampling: a generalisation of the nested sampling algorithm in which the number of “live points” varies to allocate samples more efficiently. In empirical tests the new method significantly improves calculation accuracy compared to standard nested sampling with the same number of samples; this increase in accuracy is equivalent to speeding up the computation by factors of up to ~72 for parameter estimation and ~7 for evidence calculations. We also show that the accuracy of both parameter estimation and evidence calculations can be improved simultaneously. In addition, unlike in standard nested sampling, more accurate results can be obtained by continuing the calculation for longer. Popular standard nested sampling implementations can be easily adapted to perform dynamic nested sampling, and several dynamic nested sampling software packages are now publicly available.}, note={arXiv:1704.03459 [astro-ph, physics:physics, stat]}, number={5}, journal={Statistics and Computing}, author={Higson, Edward and Handley, Will and Hobson, Mike and Lasenby, Anthony}, year={2019}, pages={891–913} }
+@article{dynamic_ns, title={Dynamic nested sampling: an improved algorithm for parameter estimation and evidence calculation}, volume={29}, url={http://arxiv.org/abs/1704.03459}, DOI={10.1007/s11222-018-9844-0}, note={arXiv:1704.03459 [astro-ph, physics:physics, stat]}, number={5}, journal={Statistics and Computing}, author={Higson, Edward and Handley, Will and Hobson, Mike and Lasenby, Anthony}, year={2019}, pages={891–913} }
 
 
 @article{plateaus,
@@ -215,4 +215,35 @@ DOI = {10.3390/psf2022005051}
     doi = {10.1063/1.4905971},
     url = {https://doi.org/10.1063/1.4905971},
     eprint = {https://pubs.aip.org/aip/acp/article-pdf/1641/1/121/12134520/121\_1\_online.pdf},
+}
+
+@article{path_sampling,
+author = {Andrew Gelman and Xiao-Li Meng},
+title = {{Simulating normalizing constants: from importance sampling to bridge sampling to path sampling}},
+volume = {13},
+journal = {Statistical Science},
+number = {2},
+publisher = {Institute of Mathematical Statistics},
+pages = {163 -- 185},
+keywords = {Acceptance ratio method, Hellinger distance, Jeffreys prior density, Markov chain Monte Carlo, numerical integration, Rao distance, thermodynamic integration},
+year = {1998},
+doi = {10.1214/ss/1028905934},
+URL = {https://doi.org/10.1214/ss/1028905934}
+}
+
+
+@unpublished{kcl_talk,
+title= {Nested sampling: powering next-generation inference and machine learning tools for cosmology, particle physics and beyond},
+author = {Will Handley},
+year = {2023},
+month={08},
+note= {King's College London},
+URL= {https://github.com/williamjameshandley/talks/raw/kcl_2023/will_handley_kcl_2023.pdf},
+}
+
+@unpublished{scaling_frontier,
+title= {The scaling frontier of nested sampling},
+author = {Will Handley},
+year = {2023},
+month={11}
 }
