added missing figures and latest changes to paper

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -247,3 +247,157 @@ author = {Will Handley},
 year = {2023},
 month={11}
 }
+
+
+@article{Chopin_2010,
+	doi = {10.1093/biomet/asq021},
+	url = {https://doi.org/10.1093%2Fbiomet%2Fasq021},
+	year = 2010,
+	month = {jun},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {97},
+	number = {3},
+	pages = {741--755},
+	author = {N. Chopin and C. P. Robert},
+	title = {Properties of nested sampling},
+	journal = {Biometrika}
+}
+
+
+@article{Keeton_2011,
+	doi = {10.1111/j.1365-2966.2011.18474.x},
+	url = {https://doi.org/10.1111%2Fj.1365-2966.2011.18474.x},
+	year = 2011,
+	month = {apr},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {414},
+	number = {2},
+	pages = {1418--1426},
+	author = {Charles R. Keeton},
+	title = {On statistical uncertainty in nested sampling},
+	journal = {Monthly Notices of the Royal Astronomical Society}
+}
+
+@article{evans,
+author = {Evans, Michael},
+year = {2006},
+month = {07},
+pages = {},
+title = {Discussion of nested sampling for Bayesian computations by John Skilling},
+volume = {8},
+journal = {World Meeting on Bayesian Statistics Benidorm}
+}
+
+@article{simulated_annealing,
+author = {S. Kirkpatrick  and C. D. Gelatt  and M. P. Vecchi },
+title = {Optimization by Simulated Annealing},
+journal = {Science},
+volume = {220},
+number = {4598},
+pages = {671-680},
+year = {1983},
+doi = {10.1126/science.220.4598.671}
+}
+
+
+@article{parallel_tempering,
+  title = {Replica Monte Carlo Simulation of Spin-Glasses},
+  author = {Swendsen, Robert H. and Wang, Jian-Sheng},
+  journal = {Phys. Rev. Lett.},
+  volume = {57},
+  issue = {21},
+  pages = {2607--2609},
+  numpages = {0},
+  year = {1986},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.57.2607},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.57.2607}
+}
+
+@article{wang_landau,
+  title = {Efficient, Multiple-Range Random Walk Algorithm to Calculate the Density of States},
+  author = {Wang, Fugao and Landau, D. P.},
+  journal = {Phys. Rev. Lett.},
+  volume = {86},
+  issue = {10},
+  pages = {2050--2053},
+  numpages = {0},
+  year = {2001},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.86.2050},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.86.2050}
+}
+
+
+@article{baldock,
+  title = {Determining pressure-temperature phase diagrams of materials},
+  author = {Baldock, Robert J. N. and P\'artay, L\'{\i}via B. and Bart\'ok, Albert P. and Payne, Michael C. and Cs\'anyi, G\'abor},
+  journal = {Phys. Rev. B},
+  volume = {93},
+  issue = {17},
+  pages = {174108},
+  numpages = {9},
+  year = {2016},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.93.174108},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.93.174108}
+}
+
+@article{Buchner_2023,
+	doi = {10.1214/23-ss144},
+	url = {https://doi.org/10.1214%2F23-ss144},
+	year = 2023,
+	month = {jan},
+	publisher = {Institute of Mathematical Statistics},
+	volume = {17},
+	number = {none},
+	author = {Johannes Buchner},
+	title = {Nested sampling methods},
+	journal = {Statistics Surveys}
+}
+
+@article{Baldock_2017,
+	doi = {10.1103/physreve.96.043311},
+	url = {https://doi.org/10.1103%2Fphysreve.96.043311},
+	year = 2017,
+	month = {oct},
+	publisher = {American Physical Society ({APS})},
+	volume = {96},
+	number = {4},
+	author = {Robert J. N. Baldock and Noam Bernstein and K. Michael Salerno and L{\'{\i}
+}via B. P{\'{a}}rtay and G{\'{a}}bor Cs{\'{a}}nyi},
+	title = {Constant-pressure nested sampling with atomistic dynamics},
+	journal = {Physical Review E}
+}
+
+
+@article{Trotta_2008,
+	doi = {10.1088/1126-6708/2008/12/024},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2008%2F12%2F024},
+	year = 2008,
+	month = {dec},
+	publisher = {Springer Science and Business Media {LLC}
+},
+	volume = {2008},
+	number = {12},
+	pages = {024--024},
+	author = {Roberto Trotta and Farhan Feroz and Mike Hobson and Leszek Roszkowski and Roberto Ruiz de Austri},
+	title = {The impact of priors and observables on parameter inferences in the constrained {MSSM}},
+	journal = {Journal of High Energy Physics}
+}
+
+   
+@article{materials, 
+    title={Nested sampling for materials}, 
+    volume={94}, 
+    DOI={10.1140/epjb/s10051-021-00172-1}, 
+    number={8}, journal={The European Physical Journal B},
+    publisher={Springer Science and Business Media LLC},
+    author={Livia B. Pártay. and Gábor Csányi and Bernstein, Noam}, 
+    year={2021}, 
+    month={Aug} 
+}
+
