--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -25,7 +25,7 @@
 \newcommand{\logLmax}{\log \Like_\mathrm{max}}
 
 \title[Approximating the end of nested sampling]{Approximating the end of nested sampling}
-\author[Z. Hu et al.]{Zixiao Hu, Artyom Baryshnikov, Will Handley}
+\author[Z. Hu et al.]{Zixiao Hu, Artem Baryshnikov, Will Handley}
 
 \begin{document}
 \label{firstpage}
