--- a/paper/references.bib
+++ b/paper/references.bib
@@ -401,3 +401,76 @@ doi = {10.1126/science.220.4598.671}
     month={Aug} 
 }
 
+@ARTICLE{nessai,
+       author = {{Williams}, Michael J. and {Veitch}, John and {Messenger}, Chris},
+        title = "{Nested sampling with normalizing flows for gravitational-wave inference}",
+      journal = {Physical Review D},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2021,
+        month = may,
+       volume = {103},
+       number = {10},
+          eid = {103006},
+        pages = {103006},
+          doi = {10.1103/PhysRevD.103.103006},
+archivePrefix = {arXiv},
+       eprint = {2102.11056},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PhRvD.103j3006W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{dnest,
+       author = {{Brewer}, Brendon J. and {Foreman-Mackey}, Daniel},
+        title = "{DNest4: Diffusive Nested Sampling in C++ and Python}",
+      journal = {arXiv e-prints},
+     keywords = {Statistics - Computation, Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Data Analysis, Statistics and Probability},
+         year = 2016,
+        month = jun,
+          eid = {arXiv:1606.03757},
+        pages = {arXiv:1606.03757},
+          doi = {10.48550/arXiv.1606.03757},
+archivePrefix = {arXiv},
+       eprint = {1606.03757},
+ primaryClass = {stat.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv160603757B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{proxnest,
+       author = {{McEwen}, Jason D. and {Liaudat}, Tob{\'\i}as I. and {Price}, Matthew A. and {Cai}, Xiaohao and {Pereyra}, Marcelo},
+        title = "{Proximal nested sampling with data-driven priors for physical scientists}",
+      journal = {arXiv e-prints},
+     keywords = {Statistics - Methodology, Astrophysics - Instrumentation and Methods for Astrophysics, Statistics - Machine Learning},
+         year = 2023,
+        month = jun,
+          eid = {arXiv:2307.00056},
+        pages = {arXiv:2307.00056},
+          doi = {10.48550/arXiv.2307.00056},
+archivePrefix = {arXiv},
+       eprint = {2307.00056},
+ primaryClass = {stat.ME},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230700056M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2017PhRvE..96d3311B,
+       author = {{Baldock}, Robert J.~N. and {Bernstein}, Noam and {Salerno}, K. Michael and {P{\'a}rtay}, L{\'\i}via B. and {Cs{\'a}nyi}, G{\'a}bor},
+        title = "{Constant-pressure nested sampling with atomistic dynamics}",
+      journal = {Physical Review E},
+     keywords = {Condensed Matter - Statistical Mechanics},
+         year = 2017,
+        month = oct,
+       volume = {96},
+       number = {4},
+          eid = {043311},
+        pages = {043311},
+          doi = {10.1103/PhysRevE.96.043311},
+archivePrefix = {arXiv},
+       eprint = {1710.11085},
+ primaryClass = {cond-mat.stat-mech},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017PhRvE..96d3311B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
