--- a/paper/references.bib
+++ b/paper/references.bib
@@ -474,3 +474,22 @@ archivePrefix = {arXiv},
 }
 
 
+@ARTICLE{2018BayAn..13..873H,
+       author = {{Higson}, Edward and {Handley}, Will and {Hobson}, Mike and {Lasenby}, Anthony},
+        title = "{Sampling Errors in Nested Sampling Parameter Estimation}",
+      journal = {Bayesian Analysis},
+     keywords = {Statistics - Methodology, Astrophysics - Instrumentation and Methods for Astrophysics, Statistics - Applications, Statistics - Methodology, Astrophysics - Instrumentation and Methods for Astrophysics, Statistics - Applications},
+         year = 2018,
+        month = mar,
+       volume = {13},
+       number = {3},
+        pages = {873-896},
+          doi = {10.1214/17-BA1075},
+archivePrefix = {arXiv},
+       eprint = {1703.09701},
+ primaryClass = {stat.ME},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018BayAn..13..873H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
